--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "express": "4.16.2"
+        "express": "4.16.2",
+        "hbs": "^4.0.1",
+        "save": "^2.3.2"
     },
     "devDependencies": {
         "mocha": "5.0.0",
