--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "description": "Hello World Node Express web application",
     "version": "0.0.1",
     "private": true,
+    "main" : "chat.js",
     "dependencies": {
         "express": "4.16.2",
         "hbs": "^4.0.1",
-        "save": "^2.3.2"
+        "save": "^2.3.2",
+        "socket.io": "^2.1.1"
     },
     "devDependencies": {
         "mocha": "5.0.0",
@@ -14,7 +16,7 @@
         "supertest": "3.0.0"
     },
     "scripts": {
-        "start": "node server.js",
+        "start": "node server/server.js",
         "test": "mocha --recursive tests --exit"
     }
 }
