--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "description": "Hello World Node Express web application",
     "version": "0.0.1",
     "private": true,
-    "main" : "chat.js",
+    "main": "chat.js",
     "dependencies": {
+        "assert": "^1.4.1",
         "express": "4.16.2",
         "hbs": "^4.0.1",
         "save": "^2.3.2",
@@ -12,8 +13,9 @@
     },
     "devDependencies": {
         "mocha": "5.0.0",
+        "supertest": "3.0.0",
         "unit.js": "2.0.0",
-        "supertest": "3.0.0"
+        "expect": "^23.6.0"
     },
     "scripts": {
         "start": "node server/server.js",
